# SOFTX-D-18-00001

./: Doxyfile  Makefile.am  Makefile.in  README  config_examples.txt  configure  configure.ac  ergo_license_long.txt  ergo_release_notes_3_6.txt
source/: Makefile.am  Makefile.in  bin2m.cc  config.h.in  ergo_input_parser.c  ergo_input_parser.l  ergo_input_processor.c  ergo_input_processor.h  ergo_input_processor.y  ergo_scripted.cc  ergo_scripted.h  fermi_contact.cc  license.h  matrix_typedefs.h  matrix_typedefs_chtml.h  slr.cc  slr.h  transform.h
source/basisset/: Makefile.am  Makefile.in  basisinfo.cc  basisinfo.h  basisset.cc  basisset.h
source/ci/: Makefile.in  ci.cc  ci.h
source/densfromf/: GetDensFromFock.cc  GetDensFromFock.h  Makefile.am  Makefile.in  densfromf_full.cc  densfromf_full.h
source/densfromf/recursive_expansion/: Makefile.am  Makefile.in
source/densfromf/recursive_expansion/eigenvectors/: Makefile.am  Makefile.in
source/densfromf/recursive_expansion/src/: Makefile.am  Makefile.in  constants.h  puri_info.cc  puri_info.h  purification_general.cc  purification_general.h  purification_sp2.h  purification_sp2acc.h  random_matrices.cc  random_matrices.h
source/dft/: Makefile.am  Makefile.in  aos.cc  aos.h  cubature_rules.cc  cubature_rules.h  dft.h  dft_common.cc  dft_common.h  fun-becke.c  fun-cam.c  fun-gga.c  fun-kt.c  fun-lb94.c  fun-lyp.c  fun-optx.c  fun-p86c.c  fun-pbec.c  fun-pbex.c  fun-pw86x.c  fun-pw91c.c  fun-pw91x.c  fun-pw92c.c  fun-pz81.c  fun-slater.c  fun-tester.cc  fun-vwn.c  functionals.c  functionals.h  grid_atomic.cc  grid_atomic.h  grid_hicu.cc  grid_hicu.h  grid_interface.h  grid_matrix.h  grid_params.h  grid_reader.cc  grid_reader.h  grid_stream.cc  grid_stream.h  (+17 more)
source/electron_dynamics/: Makefile.in  electron_dynamics.h  tdhf_dynamics.cc  tdhf_dynamics.h
source/integrals/: Makefile.am  Makefile.in  basis_func_extent.cc  basis_func_extent.h  basis_func_extent_1el.cc  basis_func_extent_1el.h  basis_func_pair_list.cc  basis_func_pair_list.h  basis_func_pair_list_1el.cc  basis_func_pair_list_1el.h  box_system.cc  box_system.h  boysfunction.cc  boysfunction.h  exponent_list.cc  exponent_list.h  hermite_conversion_explicit.cc  hermite_conversion_explicit.h  hermite_conversion_prep.cc  hermite_conversion_prep.h  hermite_conversion_symb.cc  hermite_conversion_symb.h  integral_info.cc  integral_info.h  integrals_1el.cc  integrals_1el.h  integrals_1el_kinetic.cc  integrals_1el_kinetic.h  integrals_1el_potential.cc  integrals_1el_potential.h  integrals_1el_potential_prep.cc  integrals_1el_potential_prep.h  integrals_1el_single.cc  integrals_1el_single.h  integrals_2el.h  integrals_2el_J.cc  integrals_2el_J.h  integrals_2el_J_kernel.cc  integrals_2el_J_kernel.h  integrals_2el_J_mm_kernel.cc  (+48 more)
source/matrix/: API_test.cc  Allocator.h  AllocatorManager.cc  AllocatorManager.h  DebugPolicies.h  Failure.h  FileWritable.cc  FileWritable.h  Interval.h  Lanczos.h  LanczosLargestMagnitudeEig.h  LanczosSeveralLargestEig.h  Makefile.am  Makefile.in  Matrix.h  MatrixBase.h  MatrixGeneral.h  MatrixHierarchicBase.h  MatrixSymmetric.h  MatrixTriangular.h  MatrixTridiagSymmetric.h  Memory_buffer_thread.cc  Memory_buffer_thread.h  Perturb_Test.cc  Perturbation.h  SizesAndBlocks.cc  SizesAndBlocks.h  TC2.h  ValidPtr.h  Vector.h  VectorGeneral.h  VectorHierarchicBase.h  allocate.cc  allocate.h  bench.cc  bench_gemm_only.cc  bisection.h  blastime.cc  general.h  matInclude.cc  (+11 more)
source/matrix/gemm_sse/: common.h  g_intrin.h  gemm_sse.h  mm_kernel_inner_sse2_A.h  mm_kernel_outer_A.h  vector_intrin.h
source/matrix/template_lapack/: Makefile.in
source/matrix/template_lapack/blas/: Makefile.am  Makefile.in  template_blas_asum.h  template_blas_axpy.h  template_blas_basicmath.cc  template_blas_basicmath.h  template_blas_common.cc  template_blas_common.h  template_blas_copy.h  template_blas_dot.h  template_blas_gemm.h  template_blas_gemv.h  template_blas_ger.h  template_blas_idamax.h  template_blas_nrm2.h  template_blas_num_limits.h  template_blas_rot.h  template_blas_scal.h  (+17 more)
source/scf/: Makefile.am  Makefile.in  SCF_general.cc  SCF_general.h  SCF_restricted.cc  SCF_restricted.h  SCF_statistics.cc  SCF_statistics.h  SCF_unrestricted.cc  SCF_unrestricted.h  diis_general.cc  diis_general.h  diis_restricted.cc  diis_restricted.h  diis_unrestricted.cc  diis_unrestricted.h  scf.cc  scf.h  scf_utils.cc  scf_utils.h
source/standalone/: convert_basis_set_file.cc  generate_alkane.cc
source/test/: Makefile.am  Makefile.in  basicmath_test.cc  boys_function_test.cc  csr_matrix_test.cc  explicit_integral_test.cc  gradient_test.cc  grid_test.cc  jmat_extrapolate_test.cc  jmat_test.cc  kmat_nosymm_test.cc  kmat_symm_test.cc  kmat_test.cc  lapack_test.cc  many_h_atoms_test.cc  mat_performance_test.cc  mat_thread_test.cc  matmem_test.cc  mmul_rectangular_test.cc  mmul_simple_many_test.cc  mmul_simple_test.cc  naive_response_test.cc  recexp_diag_test.cc  recexp_eigenv_test.cc  recexp_randsym_test.cc  recexp_sprandsym.cc  recexp_test.cc  registration.cc  registration.h  simple_ort_puri_test.cc  stream_test.cc  tmat_test.cc  vmat_test.cc  xcmat_nan_inf_test.cc  xcmat_r_u_test.cc  xcmat_sparse_test.cc  xcmat_test.cc
source/utilities/: Makefile.am  Makefile.in  density_description_file.cc  density_description_file.h  density_projection.cc  density_projection.h  densitymanager.cc  densitymanager.h  dipole_moment.cc  dipole_moment.h  integral_matrix_wrappers.cc  integral_matrix_wrappers.h  mat_acc_extrapolate.h  matrix_utilities.cc  matrix_utilities.h  simple_lanczos.cc  simple_lanczos.h
source/utilities_basic/: Makefile.am  Makefile.in  atom_labels.cc  atom_labels.h  barrier.c  barrier.h  csr_matrix.cc  csr_matrix.h  machine_epsilon.cc  machine_epsilon.h  matrix_algebra.cc  matrix_algebra.h  memorymanag.cc  memorymanag.h  molecule.cc  molecule.h  output.cc  output.h  pi.h  polydegree.h  realtype.h  solve_lin_eq_syst.cc  solve_lin_eq_syst.h  units.h  utilities.cc  utilities.h  xyz_file_parser.cc  xyz_file_parser.h
source/utilities_basic/file_tools/: Makefile.am  Makefile.in
(+186 files in other folders)
